# backend/docs/swagger.yaml
@@ -311,58 +311,6 @@ definitions:
     - SanctumStatusPending
     - SanctumStatusRejected
     - SanctumStatusBanned
-  models.Stream:
-    properties:
-      category:
-        type: string
-      created_at:
-        type: string
-      description:
-        type: string
-      ended_at:
-        type: string
-      id:
-        type: integer
-      is_live:
-        type: boolean
-      started_at:
-        type: string
-      stream_type:
-        description: '"youtube", "twitch", "hls", "iframe"'
-        type: string
-      stream_url:
-        type: string
-      tags:
-        description: JSON array of tags
-        type: string
-      thumbnail_url:
-        type: string
-      title:
-        type: string
-      updated_at:
-        type: string
-      user:
-        $ref: '#/definitions/models.User'
-      user_id:
-        type: integer
-      viewer_count:
-        type: integer
-    type: object
-  models.StreamMessage:
-    properties:
-      content:
-        type: string
-      created_at:
-        type: string
-      id:
-        type: integer
-      stream_id:
-        type: integer
-      user:
-        $ref: '#/definitions/models.User'
-      user_id:
-        type: integer
-    type: object
   models.User:
     properties:
       avatar:
@@ -408,34 +356,6 @@ definitions:
         type: string
       id:
         type: integer
-    type: object
-  server.CreateStreamRequest:
-    properties:
-      category:
-        type: string
-      description:
-        type: string
-      stream_type:
-        enum:
-        - youtube
-        - twitch
-        - hls
-        - iframe
-        type: string
-      stream_url:
-        type: string
-      tags:
-        type: string
-      thumbnail_url:
-        type: string
-      title:
-        maxLength: 255
-        minLength: 1
-        type: string
-    required:
-    - stream_type
-    - stream_url
-    - title
     type: object
   server.SanctumAdminDTO:
     properties:
@@ -487,23 +407,6 @@ definitions:
         type: string
       user_id:
         type: integer
-    type: object
-  server.UpdateStreamRequest:
-    properties:
-      category:
-        type: string
-      description:
-        type: string
-      stream_type:
-        type: string
-      stream_url:
-        type: string
-      tags:
-        type: string
-      thumbnail_url:
-        type: string
-      title:
-        type: string
     type: object
   service.AdminUserDetail:
     properties:
@@ -1365,227 +1268,6 @@ paths:
       summary: Get my sanctum requests
       tags:
       - sanctums
-  /streams:
-    get:
-      parameters:
-      - description: Filter by category
-        in: query
-        name: category
-        type: string
-      - default: 20
-        description: Limit results
-        in: query
-        name: limit
-        type: integer
-      - default: 0
-        description: Offset for pagination
-        in: query
-        name: offset
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            additionalProperties: true
-            type: object
-      summary: Get live streams
-      tags:
-      - Streams
-    post:
-      consumes:
-      - application/json
-      parameters:
-      - description: Stream data
-        in: body
-        name: stream
-        required: true
-        schema:
-          $ref: '#/definitions/server.CreateStreamRequest'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/models.Stream'
-      summary: Create a new stream
-      tags:
-      - Streams
-  /streams/{id}:
-    delete:
-      parameters:
-      - description: Stream ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      responses:
-        "204":
-          description: No Content
-      summary: Delete a stream
-      tags:
-      - Streams
-    get:
-      parameters:
-      - description: Stream ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Stream'
-      summary: Get stream by ID
-      tags:
-      - Streams
-    put:
-      consumes:
-      - application/json
-      parameters:
-      - description: Stream ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      - description: Stream data
-        in: body
-        name: stream
-        required: true
-        schema:
-          $ref: '#/definitions/server.UpdateStreamRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Stream'
-      summary: Update a stream
-      tags:
-      - Streams
-  /streams/{id}/end:
-    post:
-      parameters:
-      - description: Stream ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Stream'
-      summary: End streaming
-      tags:
-      - Streams
-  /streams/{id}/go-live:
-    post:
-      parameters:
-      - description: Stream ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Stream'
-      summary: Start streaming (go live)
-      tags:
-      - Streams
-  /streams/{id}/messages:
-    get:
-      parameters:
-      - description: Stream ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      - default: 50
-        description: Limit results
-        in: query
-        name: limit
-        type: integer
-      - default: 0
-        description: Offset for pagination
-        in: query
-        name: offset
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/models.StreamMessage'
-            type: array
-      summary: Get stream chat messages
-      tags:
-      - Streams
-    post:
-      consumes:
-      - application/json
-      parameters:
-      - description: Stream ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      - description: Message content
-        in: body
-        name: message
-        required: true
-        schema:
-          additionalProperties:
-            type: string
-          type: object
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/models.StreamMessage'
-      summary: Send stream chat message
-      tags:
-      - Streams
-  /streams/categories:
-    get:
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              type: string
-            type: array
-      summary: Get stream categories
-      tags:
-      - Streams
-  /streams/me:
-    get:
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/models.Stream'
-            type: array
-      summary: Get my streams
-      tags:
-      - Streams
   /ws/ticket:
     post:
       consumes:
